<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/sorting_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:visibility="visible">

        <View
            android:layout_width="30dp"
            android:layout_height="wrap_content" />

        <!-- 第二个 Spinner -->
        <Spinner
            android:id="@+id/category_sort_spinner"
            style="@style/SearchContainer"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="15dp"
            android:layout_toStartOf="@+id/sort_order_spinner"
            android:hint="@string/search_keyword_hint"
            />

        <Spinner
            android:id="@+id/sort_order_spinner"
            style="@style/SearchContainer"
            android:layout_width="161dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="15dp"
            android:hint="@string/search_keyword_hint" />

        <ScrollView
            android:id="@+id/main_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"></ScrollView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/progress_bar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/searching_similar_products" />

    </LinearLayout>



    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/similar_product_refresh"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
    <LinearLayout
        android:id="@+id/search_results_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/search_results_items"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/search_item_card_view"/>
    </LinearLayout>
    </android.support.v4.widget.SwipeRefreshLayout>

    <TextView
        android:id="@+id/error"
        style="@style/ErrorText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/search_results_no_records"
        android:visibility="gone" />
</FrameLayout>
<!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:orientation="vertical">-->

<!--    <LinearLayout-->
<!--        android:id="@+id/progress_bar_container"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:gravity="center"-->
<!--        android:layout_gravity="center"-->
<!--        android:orientation="vertical"-->
<!--        android:visibility="gone">-->

<!--        <ProgressBar-->
<!--            style="?android:attr/progressBarStyleLarge"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content" />-->

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/searching_similar_products" />-->
<!--    </LinearLayout>-->

<!--    <android.support.v4.widget.SwipeRefreshLayout-->
<!--        android:id="@+id/main_container"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:visibility="gone">-->
<!--    <LinearLayout-->
<!--        android:id="@+id/search_results_container"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:gravity="center_horizontal"-->
<!--        android:orientation="vertical"-->
<!--        android:visibility="gone">-->

<!--        <android.support.v7.widget.RecyclerView-->
<!--            android:id="@+id/search_results_items"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            tools:listitem="@layout/search_item_card_view"/>-->
<!--    </LinearLayout>-->
<!--    </android.support.v4.widget.SwipeRefreshLayout>-->

<!--    <TextView-->
<!--        android:id="@+id/error"-->
<!--        android:layout_width="300dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/search_results_no_records"-->
<!--        android:layout_gravity="center"-->
<!--        android:padding="16dp"-->
<!--        android:textColor="@color/black"-->
<!--        android:textAlignment="center"-->
<!--        android:textStyle="bold"-->
<!--        android:background="@drawable/rectangular_border"-->
<!--        android:visibility="gone"/>-->
<!--</RelativeLayout>-->
